Fix positioning of home content and add media query to control gap of nav items.

--- a/styles/style.css
+++ b/styles/style.css
@@ -91,6 +91,12 @@ button {
   gap: 3rem;
 }
 
+@media (max-width: 400px) {
+  .main-menu ul {
+    gap: 1.5rem;
+  }
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -109,9 +115,8 @@ main {
 }
 
 .home {
-  justify-content: center;
+  padding: 10rem 0;
   text-align: center;
-  height: 100vh;
 }
 
 .home h1 {
@@ -135,7 +140,7 @@ main {
 }
 
 .home img {
-  width: 250px;
+  width: 200px;
   border-radius: 50%;
   border: 5px solid white;
   margin: 1rem;
